tests/functional/lang/eval-fail-toPath-2.err.exp
error:
       … while calling the 'toPath' builtin
         at /pwd/lang/eval-fail-toPath-2.nix:1:1:
            1| builtins.toPath "foo"
             | ^
            2|

       … while evaluating the first argument passed to builtins.toPath

       error: string 'foo' doesn't represent an absolute path
